--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,12 @@
 	<div>
 		<h4>💻  Tweakers (Dutch)</h4>
 			<ul style="list-style-type:disc;">
+				<p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">In-depth feature: Chips at 2nm en semiconductor alliancies - the EU wants to strengthen its semiconductor industry</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">In-depth feature: The current state of real-time ray tracing</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">Interview: 'Next-gen will be amazing' - Billy Khan from id Software talks id Tech 7, Vulkan, and next-gen consoles</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/162226/een-terugblik-op-windows-7-vista-maar-dan-beter.html" target = "_blank">Obituary: A retrospective look at Windows 7 - 'Vista, but better'</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/173942/amd-radeon-rx-6800-xt-en-rx-6800-komen-18-november-uit-voor-649-en-579-dollar.html" target = "_blank">News: AMD Radeon RX 6800 XT and RX 6800 release 18 November for $649 and $579</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/174926/khronos-brengt-definitieve-specificatie-van-vulkan-raytracing-standaard-uit.html" target = "_blank">News: Khronos releases finalized specification for Vulkan Ray Tracing</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/169752/jedec-publiceert-definitieve-specificaties-van-ddr5-geheugenstandaard.html" target = "_blank">News: JEDEC publishes final DDR5-specification</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/178968/delftse-quantumonderzoekers-erkennen-fout-in-onderzoek-naar-majorana-deeltjes.html" target = "_blank">News: Dutch quantum researchers acknowledge mistake in Majorana particle research</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/158896/microsoft-wil-pcs-met-secured-core-label-beschermen-tegen-firmware-aanvallen.html" target = "_blank">News: Microsoft wants to protect pc's against firmware-attacks with Secured-Core label</a></li></p>
