--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 	<div>
 		<h4>💻  Tweakers (Dutch)</h4>
 			<ul style="list-style-type:disc;">
-				<p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">In-depth feature: Chips at 2nm en semiconductor alliancies - the EU wants to strengthen its semiconductor industry</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">In-depth feature: Chips at 2nm and semiconductor alliancies - the EU wants to strengthen its semiconductor industry</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">In-depth feature: The current state of real-time ray tracing</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">Interview: 'Next-gen will be amazing' - Billy Khan from id Software talks id Tech 7, Vulkan, and next-gen consoles</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96</a></li></p>
