--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<h4>👨‍💻 About Me</h4>
 		<p>Hi! I'm a freelance journalist. I currently work as a freelance news editor for Dutch tech publication <a hrefJournalistThoughts are my own :)bio.link/daanvanmonsjouJoined March 2012="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>.</p>
 		<p>Before all that, I used to write news articles for <a href="https://overclock3d.net" target = "_blank">OC3D</a> (English) and <a href="https://www.invader.be/" target = "_blank">Invader</a> (Dutch).</p>
-		<p>I mostly cover technology, including the semiconductor industry, computer hardware and software, mobile technology, video games, and privacy/security.</p>
+		<p>I mostly cover technology, including semiconductors, PC hardware, mobile technology, video games, and privacy/security.</p>
 		<br>
 		<h4>📝 My Work</h4>
 		<p>Curious about my work? Have a look at <a href="https://daanvanmonsjou.com/portfolio">my portfolio</a>.</p>
