--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div>
 		<br>
 		<h4>👨‍💻 About Me</h4>
-		<p>Hi! I'm a freelance journalist. I currently work as a freelance news editor for Dutch tech publication <a hrefJournalistThoughts are my own :)bio.link/daanvanmonsjouJoined March 2012="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>.</p>
+		<p>Hi! I'm a freelance journalist. I currently work as a freelance news editor for Dutch tech publication <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>.</p>
 		<p>Before all that, I used to write news articles for <a href="https://overclock3d.net" target = "_blank">OC3D</a> (English) and <a href="https://www.invader.be/" target = "_blank">Invader</a> (Dutch).</p>
 		<p>I mostly cover technology, including semiconductors, PC hardware, mobile technology, video games, and privacy/security.</p>
 		<br>
