--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,9 @@
 		<p>Seen enough? <a href="https://daanvanmonsjou.com">Click here</a> to return to my homepage.</p>
 		<br>
 	</div>
-
+gaskabouter [Tweakers Plus]
+7 juni 2021 18:52 • Rapporteer
+Ik zie hier zelf de meerwaarde even niet van. Als het voor de gezondheidszorg is zou ik niet weten waarom er een display op een sensor moet zitten. Daar zijn allang draadloze oplossingen voor en dan kun je zelf kiezen waar en hoe alle data getoond wordt
 	<div>
 		<h4>💻  Tweakers (Dutch)</h4>
 			<ul style="list-style-type:disc;">
@@ -38,11 +40,11 @@
 				<p><li><a href="https://tweakers.net/nieuws/184568/spyware-van-nso-group-is-ingezet-om-wereldwijd-journalisten-te-bespioneren.html" target = "_blank">News: 'Spyware from NSO Group deployed to spy on journalists worldwide'</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/169752/jedec-publiceert-definitieve-specificaties-van-ddr5-geheugenstandaard.html" target = "_blank">News: JEDEC publishes final DDR5-specification</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/178968/delftse-quantumonderzoekers-erkennen-fout-in-onderzoek-naar-majorana-deeltjes.html" target = "_blank">News: Dutch quantum researchers acknowledge mistake in Majorana particle research</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/184860/tsmc-overweegt-duitsland-als-locatie-voor-zijn-eerste-europese-chipfabriek.html" target = "_blank">News: TSMC to consider Germany as location for its first European chip factory </a></li></p>				
-				<p><li><a href="https://tweakers.net/nieuws/160040/ford-brengt-eind-2020-zijn-eerste-elektrische-auto-naar-nederland.html" target = "_blank">News: Ford will bring its first electric car to the Netherlands in 2020</a></li></p>		
+				<p><li><a href="https://tweakers.net/nieuws/184860/tsmc-overweegt-duitsland-als-locatie-voor-zijn-eerste-europese-chipfabriek.html" target = "_blank">News: TSMC to consider Germany as location for its first European chip factory</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/188886/amazon-wil-eind-2022-prototypes-van-project-kuiper-internetsatellieten-lanceren.html" target = "_blank">News: Amazon to launch prototype Project Kuiper internet satellites in 2022</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">Geek: It started with an error - The internet's predecessor started 50 years ago</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/167944/nooit-uitgebrachte-nes-racegame-is-na-30-jaar-hersteld-vanaf-21-floppys.html" target = "_blank">Geek: Unreleased NES racing game has been restored from 21 floppy disks after 30 years</a></li></p>
-		</ul>
+		</ul>You are now good to go. Your default audio device will be set on each boot and as such be persistent. If you want to change the default device simply edit the device name in startup applications command.
 		<br>
 	</div>
 	
