--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 <body>
 	<header>
 		<h1>Daan van Monsjou</h1>
-		<h2>freelance tech journalist</h2>
+		<h2>Tech journalist at Tweakers</h2>
 		<br>
 		<hr>
 	</header>
 	<div>
 		<br>
 		<h4>👨‍💻 About Me</h4>
-		<p>Hi! I'm a freelance journalist. I currently work as a freelance news editor for Dutch tech publication <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>.</p>
+		<p>Hi, I'm Daan! I'm a technology journalist for Dutch tech publication <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, where I write news and feature articles. Previously, I did an internship (twice) and freelance work at Tweakers.</p>
 		<p>Before all that, I used to write news articles for <a href="https://overclock3d.net" target = "_blank">OC3D</a> (English) and <a href="https://www.invader.be/" target = "_blank">Invader</a> (Dutch).</p>
-		<p>I mostly cover technology, including semiconductors, PC hardware, mobile technology, video games, and privacy/security.</p>
+		<p>I mostly cover technology, including the semiconductor industry, PC hardware and software, mobile technology, video games and privacy/security.</p>
 		<br>
 		<h4>📝 My Work</h4>
 		<p>Curious about my work? Have a look at <a href="https://daanvanmonsjou.com/portfolio">my portfolio</a>.</p>
