--- a/portfolio.html
+++ b/portfolio.html
@@ -27,21 +27,20 @@
 	</div>
 
 	<div>
-		<h4>💻  Tweakers (Dutch)</h4>
+		<h4>💻  Tweakers</h4>
+		<p>At Tweakers, I write news and feature articles on a wide range of tech topics. Below are some  examples of my work. All articles are in Dutch.</p>
 			<ul style="list-style-type:disc;">
-				<p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">In-depth feature: Chips at 2nm and semiconductor alliances - the EU wants to strengthen its semiconductor industry</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9446/exascale-chips-van-eigen-bodem-european-processor-initiative.html" target = "_blank">In-depth feature: Exascale chips from our own soil - European Processor Initiative</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">In-depth feature: The current state of real-time ray tracing</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">Interview: 'Next-gen will be amazing' - Billy Khan from id Software talks id Tech 7, Vulkan, and next-gen consoles</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/182508/new-york-pizza-waarschuwt-klanten-voor-datalek.html" target = "_blank">News: New York Pizza warns customers of data breach</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/184568/spyware-van-nso-group-is-ingezet-om-wereldwijd-journalisten-te-bespioneren.html" target = "_blank">News: 'Spyware from NSO Group deployed to spy on journalists worldwide'</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/169752/jedec-publiceert-definitieve-specificaties-van-ddr5-geheugenstandaard.html" target = "_blank">News: JEDEC publishes final DDR5-specification</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/178968/delftse-quantumonderzoekers-erkennen-fout-in-onderzoek-naar-majorana-deeltjes.html" target = "_blank">News: Dutch quantum researchers acknowledge mistake in Majorana particle research</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/184860/tsmc-overweegt-duitsland-als-locatie-voor-zijn-eerste-europese-chipfabriek.html" target = "_blank">News: TSMC to consider Germany as location for its first European chip factory</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/188886/amazon-wil-eind-2022-prototypes-van-project-kuiper-internetsatellieten-lanceren.html" target = "_blank">News: Amazon to launch prototype Project Kuiper internet satellites in 2022</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">Geek: It started with an error - The internet's predecessor started 50 years ago</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/167944/nooit-uitgebrachte-nes-racegame-is-na-30-jaar-hersteld-vanaf-21-floppys.html" target = "_blank">Geek: Unreleased NES racing game has been restored from 21 floppy disks after 30 years</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips at 2nm and semiconductor alliances: How the EU wants to strengthen its chip sector</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: How do Nvidia DLSS, Intel XeSS, and AMD FSR 2.0 work?</a></li></p>				
+				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">What's the deal with real-time ray-tracing?</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9592/alles-over-intels-duitse-megachipfabriek.html" target = "_blank">Everything about Intel's megafab in Germany</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: the big future of tiny chips</a></li></p>				
+				<p><li><a href="https://tweakers.net/reviews/9870/europa-wil-internetsatellieten-ondanks-kritiek.html" target = "_blank">Secure Connectivity Initiative: Europe looks to compete with SpaceX</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9788/miljardenovername-arm-van-de-baan-waarom-nvidia-zijn-grootste-aankoop-opgeeft.html" target = "_blank">Why Nvidia is giving up its acquisition of Arm</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9790/staatssteun-voor-europese-chips-chips-act-moet-halfgeleidersector-redden.html" target = "_blank">European Chips Act: Billions for European semiconductors</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/9446/exascale-chips-van-eigen-bodem-european-processor-initiative.html" target = "_blank">European Processor Initiative: Exascale chips from our own soil</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">'Next-gen is going to be fantastic': Id Software's Billy Khan on id Tech 7, Vulkan and next-gen consoles</a></li></p>
+			</ul>
 		<br>
 	</div>
 	
