--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 		<h4>💬 Contact</h4>
 		<p>You can reach me in the following ways:
 		<br><br>
-		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail</a> | 
+		<a href="mailto:daan@tweakers.net"; title="daan@tweakers.net">E-mail (business)</a> | 
+		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail (personal)</a> | 
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou/en" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
@@ -59,6 +60,7 @@
 		<br>
 		<p>Would you like to share sensitive information, or do you simply prefer to remain anonymous? That's all good! <a href="/contact">Click here</a> to find out how.</p>
 		<br><br>
+		<p>Want to share a press release? Feel free to send that to <code>redactie@tweakers.net</code>
 		<hr>
 		</p>
 	</div>
