--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 		<h4>💬 Contact</h4>
 		<p>You can reach me in the following ways:
 		<br><br>
-		<a href="mailto:daan@tweakers.net"; title="daan@tweakers.net">E-mail (business)</a> | 
-		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail (personal)</a> | 
+		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@tweakers.net">E-mail (Business)</a> | 
+		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail (Personal)</a> | 
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
-		<a href="https://www.linkedin.com/in/daanvanmonsjou/en" target = "_blank">LinkedIn</a> |
+		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="hover-area">
 			<p id="telefoonklik">Phone (click to reveal)</p>
@@ -55,12 +55,14 @@
 			<code>+31 (0)6 2513 7455
 			</code>
 		</div>
-      </div>
-	</div>
+		</div>
+		<div>
+			<p>Want to share a press release? Feel free to send that to <code>redactie@tweakers.net</code></p>
+		</div>
+		</div>
 		<br>
 		<p>Would you like to share sensitive information, or do you simply prefer to remain anonymous? That's all good! <a href="/contact">Click here</a> to find out how.</p>
 		<br><br>
-		<p>Want to share a press release? Feel free to send that to <code>redactie@tweakers.net</code>
 		<hr>
 		</p>
 	</div>
