--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,21 @@
 <body>
 	
 <div id="title">
-	<h3>Contact me anonymously</h3><hr><br>
+	<h3>Contact me</h3><hr><br>
+</div>
+
+<div id="E-mail">
+	<h4>📩  E-mail</h4>
+	<p>Personal: <a href="mailto:daan@vanmonsjou.tech">daan@vanmonsjou.tech</a></p>
+	<p>Business: <a href="mailto:daan@tweakers.net">daan@tweakers.net</a></p>
+	<p>Please only use one of two.</p>
+</div>
+
+<div id="telefoon">
+	<h4>📞  Phone</h4>
+	<p><code>+31 (0)6 2513 7455</code></p>
+	<p>This number also works with <a href="https://www.signal.org/" target = "_blank">Signal</a> (more secure) and <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
+	<p>If you message me via Signal or WhatsApp, free to send me a heads-up via e-mail!</p>
 </div>
 
 <div id="text">
@@ -24,8 +38,8 @@
 	<p>Is anonimity not a neccessity? Check out <a href="https://daanvanmonsjou.com/">my homepage</a> for other contact details.</p>
 	
 <div id="proton">
-	<h4>📧  Protonmail</h4>
-	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, an e-mail service based in Switzerland. In most cases, Protonmail is sufficiently secure. Proton has written <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">a blogpost</a> with use-cases for their service.</p>
+	<h4>📧  Proton Mail</h4>
+	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Proton Mail</a>, an e-mail service based in Switzerland. In most cases, Protonmail is sufficiently secure. Proton has written <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">a blogpost</a> with use-cases for their service.</p>
 	<p>If possible, please use the <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> when creating an anonymous Protonmail-account.<br>After you've done that, send your message to: <code>daanvanmonsjou@protonmail.com</code></p>
 	<p>Tip: Protonmail has a separate, optional website specifically for the Tor-browser: <code>https://protonirockerxow.onion/</code></p>
 	<p>Do note that you cannot open this link using a 'regular' webbrowser like Chrome or Firefox.</p>
@@ -39,15 +53,6 @@
 	I'm also on <a href="https://keybase.io/daanvanmonsjou" target = "_blank">Keybase</a>.</p>
 	<p>Fingerprint: <code>F824 72E9 5EA3 6515 2BF6 F05D B206 56DE 8FEA 2263</code></p>
 	<p>If you want me to reply to your e-mail using PGP-encryption, please include your public key in the contents of your e-mail <b>as plain text</b>.</p>
-</div>
-
-<div id="telefoon">
-	<h4>📞  Phone</h4>
-	<p>Naturally, you can reach me by phone:</p>
-	<p><code>+31 (0)6 2513 7455</code></p>
-	<p>This number also works with <a href="https://www.signal.org/" target = "_blank">Signal</a> (more secure) and <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
-	<p>Messages via Signal and WhatsApp will only be checked sporadically on this number. However, feel free to send me a heads-up via e-mail!</p> 
-	<p>Pro-tip: it might be a good idea to use a prepaid simcard (bought with cash) if privacy is a concern.</p>
 </div>
 
 <div id="overig">
