--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
 </div>
 
 <div id="text">
+	<h4>🕵️ Anonymous tips</h4>
 	<p>Would you rather contact me anonymously? That's possible! Below you'll find some (safe and secure) ways to reach me.</p>
 	<p>Is anonimity not a neccessity? Check out <a href="https://daanvanmonsjou.com/">my homepage</a> for other contact details.</p>
 	
