--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,10 @@
 	<h3>Contact me</h3><hr><br>
 </div>
 
+<div id="intro-text">
+	<p>Got tips? Feel free to reach out!</p>
+</div>
+	
 <div id="E-mail">
 	<h4>📩  E-mail</h4>
 	<p>Personal: <a href="mailto:daan@vanmonsjou.tech">daan@vanmonsjou.tech</a></p>
