--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 <div id="text">
 	<h3>🕵️ Anonymous tips</h3>
 	<p>Would you rather contact me anonymously? That's possible! Below you'll find some (safe and secure) ways to reach me.</p>
-	<p>Is anonimity not a neccessity? Check out <a href="https://daanvanmonsjou.com/">my homepage</a> for other contact details.</p>
+</div>
 	
 <div id="proton">
 	<h4>📧  Proton Mail</h4>
