--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 </div>
 
 <div id="intro-text">
-	<p>Got tips? Feel free to reach out!</p>
+	<p>Want to contact me and/or got tips? Feel free to reach out!</p>
 </div>
 	
 <div id="E-mail">
