--- a/contact.html
+++ b/contact.html
@@ -72,5 +72,5 @@
 </body>
 	
 <footer>
-	<br><p>View this page in <a href="https://daanvanmonsjou.nl/contact">Dutch</a></p><br>
+	<br><p><a href="https://daanvanmonsjou.com">Return home</a></p><br>
 </footer>
