--- a/portfolio.html
+++ b/portfolio.html
@@ -30,17 +30,15 @@
 		<h4>💻  Tweakers</h4>
 		<p>At Tweakers, I write news and feature articles on a wide range of tech topics. Below are some examples of my work. All articles are in Dutch.</p>
 			<ul style="list-style-type:disc;">
+                                <p><li><a href="https://tweakers.net/reviews/10832/cto-martin-van-den-brink-over-de-obstakels-naar-asmls-euv-alleenheerschappij.html" target = "_blank">Interview: ASML CTO Martin van den Brink on the obstacles towards EUV supremacy</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview: ASML CFO Roger Dassen: 'Even without China, we'll sell our machines'</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips at 2nm and semiconductor alliances: How the EU wants to strengthen its chip sector</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10654/amerikaans-exportverbod-neemt-chinese-chipsector-in-wurggreep.html" target = "_blank">The chip struggle between America and China: Export ban takes Chinese chip sector into chokehold</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: How do Nvidia DLSS, Intel XeSS, and AMD FSR 2.0 work?</a></li></p>				
-				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">What's the deal with real-time ray-tracing?</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">The eventful history of coreboot - BIOS alternative found second life in ChromeOS</a></li></p>				
+				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">The eventful history of coreboot - BIOS alternative found second life in ChromeOS</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10108/jeremy-soller-van-system76-over-pop_os-de-cosmic-desktop-en-hardware.html" target = "_blank">'There's an ethos to every Linux distro' - System76's Jeremy Soller on Pop!_OS and Linux hardware</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux for human beings' - Interview with Ken VanDine, head of Ubuntu Desktop</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/9592/alles-over-intels-duitse-megachipfabriek.html" target = "_blank">Everything about Intel's megafab in Germany</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: the big future of tiny chips</a></li></p>				
-				<p><li><a href="https://tweakers.net/reviews/9870/europa-wil-internetsatellieten-ondanks-kritiek.html" target = "_blank">Secure Connectivity Initiative: Europe looks to compete with SpaceX</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9788/miljardenovername-arm-van-de-baan-waarom-nvidia-zijn-grootste-aankoop-opgeeft.html" target = "_blank">Why Nvidia is giving up its acquisition of Arm</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9790/staatssteun-voor-europese-chips-chips-act-moet-halfgeleidersector-redden.html" target = "_blank">European Chips Act: Billions for European semiconductors</a></li></p>	
-				<p><li><a href="https://tweakers.net/reviews/9446/exascale-chips-van-eigen-bodem-european-processor-initiative.html" target = "_blank">European Processor Initiative: Exascale chips from our own soil</a></li></p>	
-				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">'Next-gen is going to be fantastic': Id Software's Billy Khan on id Tech 7, Vulkan and next-gen consoles</a></li></p>
 			</ul>
 		<br>
 	</div>
