--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,12 @@
                                 <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview: ASML CFO Roger Dassen: 'Even without China, we'll sell our machines'</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips at 2nm and semiconductor alliances: How the EU wants to strengthen its chip sector</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/10654/amerikaans-exportverbod-neemt-chinese-chipsector-in-wurggreep.html" target = "_blank">The chip struggle between America and China: Export ban takes Chinese chip sector into chokehold</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/11070/overname-activision-blizzard-in-zwaar-weer-na-britse-blokkade.html" target = "_blank">Why the UK wants to block Microsoft's Activision Blizzard merger</a></li></p>					
+				<p><li><a href="https://tweakers.net/reviews/11230/strijd-tussen-microsoft-en-ftc-rechtszaak-kan-toekomst-activision-deal-bepalen.html" target = "_blank">The battle between Microsoft and the FTC: Lawsuit may determine future of Activision deal</a></li></p>				
 				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: How do Nvidia DLSS, Intel XeSS, and AMD FSR 2.0 work?</a></li></p>				
 				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">The eventful history of coreboot - BIOS alternative found second life in ChromeOS</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/10108/jeremy-soller-van-system76-over-pop_os-de-cosmic-desktop-en-hardware.html" target = "_blank">'There's an ethos to every Linux distro' - System76's Jeremy Soller on Pop!_OS and Linux hardware</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux for human beings' - Interview with Ken VanDine, head of Ubuntu Desktop</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9592/alles-over-intels-duitse-megachipfabriek.html" target = "_blank">Everything about Intel's megafab in Germany</a></li></p>
-			</ul>
+				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux for human beings' - Interview with Ken VanDine, head of Ubuntu Desktop</a></li></p>			</ul>
 		<br>
 	</div>
 	
