--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<h4>💬 Contact</h4>
 		<p>You can reach me in the following ways:
 		<br><br>
-		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@tweakers.net">E-mail (Business)</a> | 
+		<a href="mailto:daan@tweakers.net"; title="daan@tweakers.net">E-mail (Business)</a> | 
 		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail (Personal)</a> | 
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
