--- a/portfolio.html
+++ b/portfolio.html
@@ -27,21 +27,32 @@
 	</div>
 
 	<div>
-		<h4>💻  Tweakers</h4>
+		<h4>💻  Features at Tweakers</h4>
 		<p>At Tweakers, I write news and feature articles on a wide range of tech topics. Below are some examples of my work. All articles are in Dutch.</p>
 			<ul style="list-style-type:disc;">
                                 <p><li><a href="https://tweakers.net/reviews/10832/cto-martin-van-den-brink-over-de-obstakels-naar-asmls-euv-alleenheerschappij.html" target = "_blank">Interview: ASML CTO Martin van den Brink on the obstacles towards EUV supremacy</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview: ASML CFO Roger Dassen: 'Even without China, we'll sell our machines'</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips at 2nm and semiconductor alliances: How the EU wants to strengthen its chip sector</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/10654/amerikaans-exportverbod-neemt-chinese-chipsector-in-wurggreep.html" target = "_blank">The chip struggle between America and China: Export ban takes Chinese chip sector into chokehold</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/11070/overname-activision-blizzard-in-zwaar-weer-na-britse-blokkade.html" target = "_blank">Why the UK wants to block Microsoft's Activision Blizzard merger</a></li></p>					
-				<p><li><a href="https://tweakers.net/reviews/11230/strijd-tussen-microsoft-en-ftc-rechtszaak-kan-toekomst-activision-deal-bepalen.html" target = "_blank">The battle between Microsoft and the FTC: Lawsuit may determine future of Activision deal</a></li></p>				
 				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: How do Nvidia DLSS, Intel XeSS, and AMD FSR 2.0 work?</a></li></p>				
 				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">The eventful history of coreboot - BIOS alternative found second life in ChromeOS</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/10108/jeremy-soller-van-system76-over-pop_os-de-cosmic-desktop-en-hardware.html" target = "_blank">'There's an ethos to every Linux distro' - System76's Jeremy Soller on Pop!_OS and Linux hardware</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux for human beings' - Interview with Ken VanDine, head of Ubuntu Desktop</a></li></p>			</ul>
 		<br>
 	</div>
+
+		<h4>💻  Microsoft/Activision coverage</h4>
+		<p>Over the past few months, I've provided extensive coverage of the proposed Activision Blizzard acquisition by Microsoft Below are some highlights (again, in Dutch).</p>
+			<ul style="list-style-type:disc;">
+				<p><li><a href="https://tweakers.net/reviews/11070/overname-activision-blizzard-in-zwaar-weer-na-britse-blokkade.html" target = "_blank">Why the UK wants to block Microsoft's Activision Blizzard merger</a></li></p>					
+				<p><li><a href="https://tweakers.net/reviews/11230/strijd-tussen-microsoft-en-ftc-rechtszaak-kan-toekomst-activision-deal-bepalen.html" target = "_blank">The battle between Microsoft and the FTC: Lawsuit may determine future of Activision deal</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/11252/megadeal-microsoft-en-activision-nadert-de-eindstreep-hoe-gaat-het-nu-verder.html" target = "_blank">Activision Blizzard deal nears the finish line: What's next?</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/211248/playstation-baas-game-uitgevers-zijn-niet-blij-met-xbox-game-pass.html" target = "_blank">PlayStation chief: 'Game publishers are unhappy with Xbox Game Pass'</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/211290/microsoft-ceo-wil-graag-stoppen-met-xbox-exclusives-maar-legt-schuld-bij-sony.html" target = "_blank">Microsoft CEO 'would prefer' to stop releasing Xbox exclusives, but puts blame on Sony</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/211324/xbox-baas-besloot-in-2021-alle-bethesda-games-xbox-exclusives-te-maken.html" target = "_blank">Xbox chief decided to make all Bethesda games Xbox exclusives in 2021</a></li></p>
+		<br>
+	</div>
+
 	
 	<div>
 		<h4>📰	RTV Oost</h4>
