--- a/contact.html
+++ b/contact.html
@@ -20,48 +20,22 @@
 </div>
 
 <div id="intro-text">
-	<p>Want to contact me and/or got tips? Feel free to reach out!</p>
-</div>
-	
-<div id="E-mail">
-	<h4>📩  E-mail</h4>
-	<p>Business: <a href="mailto:daan@tweakers.net">daan@tweakers.net</a></p>
-	<p>Personal: <a href="mailto:daan@vanmonsjou.tech">daan@vanmonsjou.tech</a></p>
+	<p>Want to contact me anonymously and/or got tips? Below you'll find some (safe and secure) ways to reach me!</p>
 </div>
 
-<div id="telefoon">
-	<h4>📞  Phone</h4>
-	<p><code>+31 (0)6 2513 7455</code></p>
-	<p>This number also works with <a href="https://www.signal.org/" target = "_blank">Signal</a> (more secure) and <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
-	<p>If you message me via Signal or WhatsApp, free to send me a heads-up via e-mail!</p>
-</div>
-	
-<br><hr>
-
-<div id="text">
-	<h3>🕵️ Anonymous tips</h3>
-	<p>Would you rather contact me anonymously? That's possible! Below you'll find some (safe and secure) ways to reach me.</p>
-</div>
-	
 <div id="proton">
 	<h4>📧  Proton Mail</h4>
-	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Proton Mail</a>, an e-mail service based in Switzerland. In most cases, Protonmail is sufficiently secure. Proton has written <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">a blogpost</a> with use-cases for their service.</p>
+	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Proton Mail</a>, an e-mail service based in Switzerland. In most cases, Protonmail is sufficiently secure. Proton has written <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">a blogpost</a> with use-cases and limitations for their service.</p>
 	<p>If possible, please use the <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> when creating an anonymous Protonmail-account.<br>After you've done that, send your message to: <code>daanvanmonsjou@protonmail.com</code></p>
-	<p>Tip: Protonmail has a separate, optional website specifically for the Tor-browser: <code>https://protonirockerxow.onion/</code></p>
+	<p>Tip: Protonmail has a separate website specifically for use with the Tor browser: <code>https://protonirockerxow.onion/</code></p>
 	<p>Do note that you cannot open this link using a 'regular' webbrowser like Chrome or Firefox.</p>
-</div>
-	
-<div id="overig">
-	<h4>📫  Other</h4>
-	
-	<p>I'm also on the following services:</p>
-	
-	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>: 
-	<code> YEYVFWSK </code></p>
-	<p><a href="https://wire.com" target = "_blank">Wire</a>: 
-	<code> @daanvanmonsjou </code></p>
-	<p><a href="https://wickr.com/" target = "_blank">Wickr</a>: 
-	<code> @daanvanmonsjou </code></p>
+</div>	
+
+<div id="telefoon">
+	<h4>📞  Signal</h4>
+	<p>You can also reach me via <a href="https://www.signal.org/" target = "_blank">Signal</a>, a secure and end-to-end encrypted messaging app. You can use the number below to send me a message.</p>
+	<p><code>+31 (0)6 2513 7455</code></p>	
+	<p>Naturally, you can also call this number, or shoot me a message via <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
 </div>
 	
 <div id="Tweakers_publeaks">
