--- a/portfolio.html
+++ b/portfolio.html
@@ -40,9 +40,10 @@
                                 <p><li><a href="https://tweakers.net/reviews/12014/van-de-eu-tot-china-de-wereldwijde-strijd-om-chipproductie-veilig-te-stellen.html" target = "_blank">From the EU to China: the global fight to secure chip production</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips at 2nm and semiconductor alliances: How the EU wants to strengthen its chip sector</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: the great future of tiny chips</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/12082/tsmc-technology-symposium-2024-voorbij-de-2nm-en-chipstapels-op-waferschaal.html" target = "_blank">TSMC Technology Symposium 2024: Beyond 2nm and chip stacks on a wafer-scale</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/12082/tsmc-technology-symposium-2024-voorbij-de-2nm-en-chipstapels-op-waferschaal.html" target = "_blank">TSMC Technology Symposium 2024: Beyond 2nm and chip stacks on a wafer-scale</a></li></p></ul>
 				<br>
-		<h4>⚙️  General technology coverage</h4>	
+		<h4>⚙️  General technology coverage</h4>
+			>ul style="list-style-type:disc;">
                                 <p><li><a href="https://tweakers.net/reviews/11420/de-digital-services-act-is-van-kracht-wat-gaan-we-daarvan-merken.html" target = "_blank">The Digital Services Act is now in effect: What will we notice?</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/11588/google-en-epic-games-strijden-voor-rechtbank-over-play-store-monopolie.html" target = "_blank">Is the Play Store an illegal monopoly? Google and Epic Games fight it out in court</a></li></p>	
 				<p><li><a href="https://tweakers.net/reviews/11550/microsoft-over-project-silica-7tb-data-op-een-stukje-glas.html" target = "_blank">Microsoft on Project Silica: 7TB of data on a piece of glass</a></li></p>					
