--- a/portfolio.html
+++ b/portfolio.html
@@ -39,18 +39,20 @@
                                 <p><li><a href="https://tweakers.net/reviews/12014/van-de-eu-tot-china-de-wereldwijde-strijd-om-chipproductie-veilig-te-stellen.html" target = "_blank">From the EU to China: the global fight to secure chip production</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips at 2nm and semiconductor alliances: How the EU wants to strengthen its chip sector</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: the great future of tiny chips</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/12082/tsmc-technology-symposium-2024-voorbij-de-2nm-en-chipstapels-op-waferschaal.html" target = "_blank">TSMC Technology Symposium 2024: Beyond 2nm and chip stacks on a wafer-scale</a></li></p></ul>
-				<br>
+                                <p><li><a href="https://tweakers.net/reviews/12082/tsmc-technology-symposium-2024-voorbij-de-2nm-en-chipstapels-op-waferschaal.html" target = "_blank">TSMC Technology Symposium 2024: Beyond 2nm and chip stacks on a wafer-scale</a></li></p>
+			</ul>
+			<br>
 		<h4>⚙️  General technology coverage</h4>
-			>ul style="list-style-type:disc;">
+			<ul style="list-style-type:disc;">
                                 <p><li><a href="https://tweakers.net/reviews/11420/de-digital-services-act-is-van-kracht-wat-gaan-we-daarvan-merken.html" target = "_blank">The Digital Services Act is now in effect: What will we notice?</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/11588/google-en-epic-games-strijden-voor-rechtbank-over-play-store-monopolie.html" target = "_blank">Is the Play Store an illegal monopoly? Google and Epic Games fight it out in court</a></li></p>	
 				<p><li><a href="https://tweakers.net/reviews/11550/microsoft-over-project-silica-7tb-data-op-een-stukje-glas.html" target = "_blank">Microsoft on Project Silica: 7TB of data on a piece of glass</a></li></p>					
 				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: How do Nvidia DLSS, Intel XeSS, and AMD FSR 2.0 work?</a></li></p>	
 				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">The eventful history of coreboot - BIOS alternative found second life in ChromeOS</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/10108/jeremy-soller-van-system76-over-pop_os-de-cosmic-desktop-en-hardware.html" target = "_blank">'There's an ethos to every Linux distro' - System76's Jeremy Soller on Pop!_OS and Linux hardware</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux for human beings' - Interview with Ken VanDine, head of Ubuntu Desktop</a></li></p>			</ul>
-		<br>
+				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux for human beings' - Interview with Ken VanDine, head of Ubuntu Desktop</a></li></p>	
+			</ul>
+			<br>
 	</div>
 
 		<h4>💰  Microsoft/Activision coverage</h4>
