--- a/portfolio.html
+++ b/portfolio.html
@@ -55,8 +55,8 @@
 			<br>
 	</div>
 
-		<h4>💰  Microsoft/Activision coverage</h4>
-		<p>I've provided extensive coverage of the proposed Activision Blizzard acquisition by Microsoft. Below are some highlights.</p>
+		<h4>💰  Microsoft/Activision acquisition</h4>
+		<p>I've provided extensive coverage of the Activision Blizzard acquisition by Microsoft. Below are some highlights.</p>
 			<ul style="list-style-type:disc;">
 				<p><li><a href="https://tweakers.net/reviews/11070/overname-activision-blizzard-in-zwaar-weer-na-britse-blokkade.html" target = "_blank">Why the UK wants to block Microsoft's Activision Blizzard merger</a></li></p>					
 				<p><li><a href="https://tweakers.net/reviews/11230/strijd-tussen-microsoft-en-ftc-rechtszaak-kan-toekomst-activision-deal-bepalen.html" target = "_blank">The battle between Microsoft and the FTC: Lawsuit may determine future of Activision deal</a></li></p>
