--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
 		<h4>💬 Contact</h4>
 		<p>You can reach me in the following ways:
 		<br><br>
-		<a href="mailto:daan@tweakers.net"; title="daan@tweakers.net">E-mail (Business)</a> | 
-		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail (Personal)</a> | 
-		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
+		<a href="mailto:daan@tweakers.net"; title="daan@tweakers.net">E-mail</a> | 
+		<a href="https://bsky.app/profile/daanvanmonsjou.nl" target = "_blank">Bluesky</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
-		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="hover-area">
 			<p id="telefoonklik">Phone (click to reveal)</p>
 			
@@ -61,7 +59,7 @@
 		</div>
 		<br>
 		<p>Would you like to share sensitive information, or do you simply prefer to remain anonymous? That's all good! <a href="/contact">Click here</a> to find out how.</p>
-		<p>Want to share a press release? Feel free to send that to <code>redactie@tweakers.net</code></p>
+		<p>Please send press releases to <code>redactie@tweakers.net</code>. Thanks!</p>
 		<br><br>
 		<hr>
 		</p>
