--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,12 @@
 <head>
 	<!-- meta & title -->
 	<meta charset="UTF-8">
-	<meta name="description" content="Daan van Monsjou - Techjournalist bij Tweakers">
+	<meta name="description" content="Daan van Monsjou - Technology Journalist at Tweakers">
 	<meta name="author" content="Daan van Monsjou">	
-	<meta name="keywords" content="Daan van Monsjou, techjournalist, Tweakers">
+	<meta name="keywords" content="Daan van Monsjou, technology journalist, Tweakers">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js averagenl.github.io github.com daanvanmonsjou.nl daanvanmonsjou.nl/script.js cdn.report-uri.com 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po=' daanvanmonsjou.nl/*  daanvanmonsjou.nl/script.js eff.org cdn.report-uri.com platform.twitter.com syndication.twitter.com cdn.syndication.twimg.com youtube.com https://static.doubleclick.net/instream/ad_status.js; frame-src datawrapper.dwcdn.net https://www.youtube.com/ twitter.com https://s.ytimg.com https://platform.twitter.com syndication.twitter.com cdn.syndication.twimg.com; child-src 'self' https://www.youtube.com/ https://s.ytimg.com; style-src 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js https://daanvanmonsjou.nl/script.js 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po=' https://platform.twitter.com/css/ fonts.googleapis.com 'self'; font-src fonts.gstatic.com; object-src 'self'; img-src https: data:; script-src-elem 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js 'sha256-sNINh+kurY8RLvJai+7ElQLjpy40s9I4LeVp32TcQ/o=' eff.org https://cdn.report-uri.com/libs/report-uri-js/1.0.1/report-uri-js.min.js https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js https://cdn.syndication.twimg.com/tweets.json https://platform.twitter.com/ 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po='; style-src-attr 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js 'sha256-TSdVhERf7QyenIlQ77eiEVSvNjCg/FQ544mYSaRUgYw=' 'sha256-sNINh+kurY8RLvJai+7ElQLjpy40s9I4LeVp32TcQ/o=' 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po='; media-src 'self' https://www.youtube.com; upgrade-insecure-requests; connect-src daanvanmonsjou.report-uri.com; report-uri https://daanvanmonsjou.report-uri.com; frame-ancestors 'none'; base-uri 'self'; form-action 'none';">
-	<title>Daan van Monsjou - Techjournalist bij Tweakers</title>
+	<title>Portfolio - Daan van Monsjou</title>
 	
 	<!-- style -->
 	<link href="stylesheet.css" rel="stylesheet">
@@ -16,20 +17,14 @@
 	<link rel="icon" href="img/icon.png">
 	
 </head>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Daan van Monsjou</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
 <body>
     <header>
         <div class="header-container">
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://daanvanmonsjou.com">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact en tips</a></li>
+                    <li><a href="contact.html">Contact and tips</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,31 +32,31 @@
     <main>
 	<section>
         <h2>Portfolio</h2>
-		<p>Bij Tweakers schrijf ik nieuws- en achtergrondartikelen over een breed scala aan techonderwerpen. Hieronder vind je een aantal  voorbeelden van mijn werk.</p><br>
+		<p>At Tweakers, I write news and feature articles on a wide range of tech topics. Below are some examples of my work.</p><br>
 	</section>
-	<h3>Halfgeleiders en de chipsector</h3>
+	<h3>Semiconductors and the chip industry</h3>
 <ul class="portfolio">
-                                <p><li><a href="https://tweakers.net/reviews/10832/cto-martin-van-den-brink-over-de-obstakels-naar-asmls-euv-alleenheerschappij.html" target = "_blank">Interview: ASML CTO Martin van den Brink over de obstakels naar EUV-heerschappij</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview: ASML CFO Roger Dassen: 'Ook zonder China raken we onze machines wel kwijt''</a></li></p>
-                                <p><li><a href="https://www.youtube.com/watch?v=-xL5v-j7KnM" target = "_blank">Video: De chips van 2035 zijn er stiekem al, in België! - Op bezoek bij imec (YouTube)</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/12462/intel-is-overnamedoelwit-voor-qualcomm-wat-is-er-aan-de-hand.html" target = "_blank">'Intel is overnamedoelwit voor Qualcomm' - Wat is er aan de hand?</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/11996/project-beethoven-nederland-steekt-miljarden-in-de-eindhovense-chipsector.html" target = "_blank">Project Beethoven: Nederland stopt miljarden in Eindhovense chipsector</a></li></p>	
-                                <p><li><a href="https://tweakers.net/reviews/12014/van-de-eu-tot-china-de-wereldwijde-strijd-om-chipproductie-veilig-te-stellen.html" target = "_blank">Van de EU naar China: De wereldwijde strijd om chipproductie</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips op 2nm en halfgeleiderallianties: Hoe de EU haar chipsector wil versterken</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: de grote toekomst van kleine chips</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/12082/tsmc-technology-symposium-2024-voorbij-de-2nm-en-chipstapels-op-waferschaal.html" target = "_blank">TSMC Technology Symposium 2024: Voorbij de 2nm en chipstapels op waferschaal</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/10832/cto-martin-van-den-brink-over-de-obstakels-naar-asmls-euv-alleenheerschappij.html" target = "_blank">Interview: ASML CTO Martin van den Brink on the obstacles to EUV dominance</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview: ASML CFO Roger Dassen: 'Even without China, we'll sell our machines'</a></li></p>
+                                <p><li><a href="https://www.youtube.com/watch?v=-xL5v-j7KnM" target = "_blank">Video: The chips of 2035 are secretly already here, in Belgium! - Visiting imec (YouTube)</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/12462/intel-is-overnamedoelwit-voor-qualcomm-wat-is-er-aan-de-hand.html" target = "_blank">'Intel is acquisition target for Qualcomm' - What's going on?</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/11996/project-beethoven-nederland-steekt-miljarden-in-de-eindhovense-chipsector.html" target = "_blank">Project Beethoven: Netherlands invests billions in Eindhoven's chip industry</a></li></p>	
+                                <p><li><a href="https://tweakers.net/reviews/12014/van-de-eu-tot-china-de-wereldwijde-strijd-om-chipproductie-veilig-te-stellen.html" target = "_blank">From the EU to China: The global battle over chip production</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips at 2nm and semiconductor alliances: How the EU wants to strengthen its chip sector</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: the great future of small chips</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/12082/tsmc-technology-symposium-2024-voorbij-de-2nm-en-chipstapels-op-waferschaal.html" target = "_blank">TSMC Technology Symposium 2024: Beyond 2nm and chip stacks at wafer-scale</a></li></p>
 			</ul>
 			<br>
 		<h3>Algemene techverhalen</h3>
 			<ul class="portfolio">
-                                <p><li><a href="https://tweakers.net/reviews/11420/de-digital-services-act-is-van-kracht-wat-gaan-we-daarvan-merken.html" target = "_blank">The Digital Services Act is van kracht: Wat gaan we daarvan merken?</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/11588/google-en-epic-games-strijden-voor-rechtbank-over-play-store-monopolie.html" target = "_blank">Is de Play Store een illegaal monopolie? Google en Epic Games vechten het uit voor de rechtbank</a></li></p>	
-				<p><li><a href="https://tweakers.net/reviews/11550/microsoft-over-project-silica-7tb-data-op-een-stukje-glas.html" target = "_blank">Microsoft over Project Silica: 7TB data op een stukje glas</a></li></p>					
-				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: Hoe werken Nvidia DLSS, Intel XeSS en AMD FSR 2.0?</a></li></p>	
-				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">De bewogen geschiedenis van coreboot - ChromeOS gaf bios-alternatief tweede leven</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10108/jeremy-soller-van-system76-over-pop_os-de-cosmic-desktop-en-hardware.html" target = "_blank">'Er is een ethos voor elke Linux-distro' - Jeremy Soller van System76 over Pop_OS en hardware</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux voor gewone mensen' - Interview met Ken VanDine, hoofd Ubuntu Desktop</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10626/proton-ceo-over-privacy-en-big-tech-ons-doel-is-een-privacyecosysteem.html" target = "_blank">'Ons doel is een privacy-ecosysteem' Proton-ceo Andy Yen over privacy en Big Tech</a></li></p>					
+                                <p><li><a href="https://tweakers.net/reviews/11420/de-digital-services-act-is-van-kracht-wat-gaan-we-daarvan-merken.html" target = "_blank">The Digital Services Act is in effect: What will we notice?</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/11588/google-en-epic-games-strijden-voor-rechtbank-over-play-store-monopolie.html" target = "_blank">Is the Play Store an illegal monopoly? Google and Epic Games fight it out in court</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/11550/microsoft-over-project-silica-7tb-data-op-een-stukje-glas.html" target = "_blank">Microsoft on Project Silica: 7TB of data on a piece of glass</a></li></p>					
+				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: how do Nvidia DLSS, Intel XeSS and AMD FSR 2.0 work?</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">The eventful history of coreboot - BIOS alternative found second life in ChromeOS</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10108/jeremy-soller-van-system76-over-pop_os-de-cosmic-desktop-en-hardware.html" target = "_blank">'There is an ethos to every Linux distro' - Jeremy Soller of System76 on Pop!_OS and hardware</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux for human beings' - Interview with Ken VanDine, head of Ubuntu Desktop</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10626/proton-ceo-over-privacy-en-big-tech-ons-doel-is-een-privacyecosysteem.html" target = "_blank">'Our goal is a privacy ecosystem' - Proton CEO Andy Yen on privacy and Big Tech</a></li></p>					
 			</ul>
 			<br>
 	</div>
