--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="https://daanvanmonsjou.com">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact en tips</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
